--- a/blog/src/App.scss
+++ b/blog/src/App.scss
@@ -14,6 +14,10 @@
     &-main {
       height: 100%;
       padding: 20px;
+
+    }
+    &-content {
+      height: 100%;
       .bgwh {
         height: 100%;
       }
